--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 *{
-    /*font-family: 'Itim', cursive;*/
+    font-family: 'Raleway', sans-serif;
 }
 .carousel-item{
     height: 300px;
@@ -36,7 +36,7 @@
     position: absolute;
     top: 0;
     left: 0;
-    background-color: rgba(0, 0, 0, 0.7);
+    background-color: rgba(0, 0, 0, 0.5);
     width: 100%;
     height: 100%;
 }
